feat(auth): register and auth -> model + controller + JWT security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=shareDrawingApi
+spring.application.name=share-drawing
+spring.datasource.url=jdbc:postgresql://ep-lingering-art-a2j8um2f.eu-central-1.aws.neon.tech/share-drawing-db
+spring.datasource.username=share-drawing-db_owner
+spring.datasource.password=IUwz0hrBLE5F
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = create-drop
