--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=share-drawing
-spring.datasource.url=jdbc:postgresql://ep-lingering-art-a2j8um2f.eu-central-1.aws.neon.tech/share-drawing-db
-spring.datasource.username=share-drawing-db_owner
-spring.datasource.password=IUwz0hrBLE5F
-spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER_NAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = create-drop
